applications/lemmy/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy-nginx
spec:
  selector:
    matchLabels:
      app: lemmy
      service: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: lemmy
        service: nginx
    spec:
      containers:
        - name: lemmy
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp/nginx
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf  # https://stackoverflow.com/a/39479928
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 20m
              memory: 50Mi
              ephemeral-storage: 100Mi
            limits:
              memory: 50Mi
              ephemeral-storage: 500Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: lemmy-nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lemmy
    service: nginx
  name: lemmy-nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: lemmy
    service: nginx
  type: ClusterIP
