applications/lemmy/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy-ui
spec:
  selector:
    matchLabels:
      app: lemmy
      service: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: lemmy
        service: ui
    spec:
      containers:
        - name: lemmy
          image: dessalines/lemmy-ui:0.18.5
          imagePullPolicy: Always
          ports:
            - containerPort: 1234
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
              ephemeral-storage: 500Mi
            limits:
              memory: 100Mi
              ephemeral-storage: 1Gi
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lemmy
    service: ui
  name: lemmy-ui
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 1234
  selector:
    app: lemmy
    service: ui
  type: ClusterIP
