applications/lemmy/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.jlh.name/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.jlh.name/oauth2/start?rd=https://$host$escaped_request_uri"
  name: lemmy
spec:
  tls:
    - hosts:
        - lemmy.jlh.name
      secretName: lemmy-jlh-name-tls
  rules:
    - host: lemmy.jlh.name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lemmy-nginx
                port:
                  name: http
